# app/controllers/api/v1/loans_controller.rb
@@ -24,6 +24,7 @@ class Api::V1::LoansController < Api::V1::BaseController
     render :amortization_schedule, locals: {
       loan: @loan,
       schedule: @loan.amortization_schedule,
+      projection: @loan.payoff_projection,
       payments: @loan.amortizations.ordered.offset(offset).limit(limit),
       total_count: @loan.amortizations.count,
       limit: limit,
